<resources>
    <string name="app_name">DamHwa_Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story_title">이야기</string>
    <string name="feeling_title">감정</string>
    <string name="calendar_title">꽃 달력</string>
    <string name="write_letter">서신 쓰기</string>
    <string name="write_feeling">기분</string>
    <string name="write_letter_ph">서신을 작성하시오</string>
    <string name="recommend_flower">꽃으로 전하기</string>
    <string name="write_feeling_guide">오늘 기분이 어떤지 적어보세요. \n예쁜 꽃을 추천해드릴게요.</string>
    <string name="write_letter_guide">누군가에게 서신을 써보세요. \n카카오톡으로 꽃과 함께 공유해봐요.</string>
    <string name="write_feeling_ph">정성스럽게 적어주세요!</string>
    <string name="recommend_flower_feeling">추천받기</string>
    <string name="rec_flower_title">이야기</string>
    <string name="feeling_guide">%s 당신, </string>
    <string name="flower_guide">오늘은 %s 어때요?</string>
    <string name="kakao_app_key">kakao5d4ceabed4218c89d458e28bfdd4ed60</string>
    <string name="first_landing_flower">꽃\n으\n로\n\n하\n는\n\n이\n야\n기</string>
    <string name="first_landing_damhwa">담\n화</string>
    <string name="third_landing_damhwa">담화</string>
    <string name="third_landing_mind">마음</string>
    <string name="third_landing_most">가장</string>
    <string name="third_landing_perfume">향기로운</string>
    <string name="third_landing_send">을 전하는</string>
    <string name="void_feeling_text">감정 텍스트가 비었습니다.</string>
    <string name="void_letter_text">편지 텍스트가 비었습니다.</string>
    <string name="third_landing_method">방법</string>
    <string name="changing_guide">텍스트를 변환하고 있습니다.</string>
    <string name="changing_caution">입력하신 데이터에 따라서 \n결과물이 정확하지 않을 수 있습니다.</string>
    <string name="kakao_caution">주의사항: 카카오톡이 아닌 웹을 통해 공유할 시 캘린더에 기록이 남지 않을 수 있습니다!</string>
    <string name="receiver">받는이</string>
</resources>